[1.14.0]
- [BREAKING CHANGE] Android: Updated minSDK to 21. Multidex config is no longer required, please check https://developer.android.com/build/multidex.
- API Addition: Added BooleanArray#replaceFirst and BooleanArray#replaceAll
- API Addition: Added ByteArray#replaceFirst and ByteArray#replaceAll
- API Addition: Added CharArray#replaceFirst and CharArray#replaceAll
- API Addition: Added DelayedRemovalArray#replaceFirst and DelayedRemovalArray#replaceAll
- API Addition: Added FloatArray#replaceFirst and FloatArray#replaceAll
- API Addition: Added IntArray#replaceFirst and IntArray#replaceAll
- API Addition: Added LongArray#replaceFirst and LongArray#replaceAll
- API Addition: Added ShortArray#replaceFirst and ShortArray#replaceAll
- API Addition: Added SnapshotArray#replaceFirst and SnapshotArray#replaceAll
- Android: Fixed rare NPE when `onDestroy` was called

[1.13.1]
- [BREAKING CHANGE] Android: Since 1.13.0 libGDX requires setting `android.useAndroidX=true` in your gradle.properties file. In 1.13.1 it is NO longer needed to define the `androidx.core:core` dependency in your Android module.
- iOS: Update to MobiVM 2.3.22
- iOS: Fixes Gdx.openURI() not working on iOS 18.1 Simulator.
- Change visibility of PolygonSpriteBatch.switchTexture() to protected
- Added XmlReader.getChildren() and XmlReader.replaceChild()
- LWJGL3: Fix pauseWhenLostFocus not working as expected
- LWJGL 3: Downgrade to 3.3.3 due to AV false positives on 3.3.4 and OpenAL log spamming issue on 3.3.5.
- API Addition: Added FPSLogger#setBound
- Android: Fix crash on startup if `setContentView` was manually called after `initializeForView`
- API Addition: Added Array#replaceFirst and Array#replaceAll
- Fixed ShortArray#lastIndexOf taking char instead of short.
- Properly validate font name in Hiero
- Fix depth shader recycling
- Support 'class' Tiled/Tmx MapProperty
- Support for Layer TintColor in TiledMap
- Fix classpath files not being loaded on GWT